# AIAudioSummary

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.noauth.yml  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  config.py  main.py  prompt_template_openai.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users.py  0002_add_last_visit_at.py
backend/api/assemblyai/: router.py
backend/api/auth/: router.py
backend/api/chatbot/: router.py
backend/api/form_output/: router.py
backend/api/live_questions/: router.py
backend/api/llm/: router.py
backend/api/misc/: router.py
backend/api/openai/: router.py
backend/api/prompt_assistant/: router.py
backend/api/realtime/: router.py
backend/api/users/: router.py
backend/api/webhook/: router.py
backend/audio/: test2.m4a
backend/db/: engine.py  models.py
backend/dependencies/: auth.py
backend/models/: assemblyai.py  chatbot.py  config.py  form_output.py  live_questions.py  llm.py  openai.py  prompt_assistant.py  realtime.py  users.py  webhook.py
backend/prompt_templates/: detailed_meeting_summary.md  email_draft.md  email_status_update.md  short_meeting_summary.md
backend/service/assembly_ai/: core.py
backend/service/auth/: core.py
backend/service/chatbot/: actions.py  core.py
backend/service/form_output/: core.py
backend/service/live_questions/: core.py
backend/usage_guide/: usage_guide.md
backend/utils/: helper.py  logging.py  seed.py
(+171 files in other folders)
