[project]
name = "backend"
version = "0.1.0"
description = "Backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic-settings>=2.10.0",
    "python-multipart>=0.0.20",
    "assemblyai",
    "pytz",
    "pydantic-ai>=1.59.0",
    "websockets>=15.0.1",
]
