[project]
name = "backend"
version = "0.1.0"
description = "Backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic-settings>=2.10.0",
    "python-multipart>=0.0.20",
    "assemblyai",
    "pytz",
    "pydantic-ai>=1.59.0",
    "websockets>=15.0.1",
    "langdetect>=1.0.9",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pyjwt>=2.10.0",
    "aiofiles>=24.1.0",
]
